--- a/rest/package.json
+++ b/rest/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mssql": "^6.2.3"
+    "express": "^4.17.1",
+    "mssql": "^6.2.3",
+    "typeorm": "^0.2.29"
   }
 }
