--- a/package.json
+++ b/package.json
@@ -18,28 +18,29 @@
     "@angular/core": "~11.0.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.4",
+    "@angular/localize": "~11.0.4",
     "@angular/material": "^11.0.2",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
-    "@progress/kendo-angular-grid": "^4.8.4",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
     "@progress/kendo-angular-buttons": "^5.0.0",
     "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-dateinputs": "^4.0.0",
     "@progress/kendo-angular-dropdowns": "^4.0.0",
+    "@progress/kendo-angular-excel-export": "^3.0.0",
+    "@progress/kendo-angular-grid": "^4.8.4",
     "@progress/kendo-angular-inputs": "^6.0.0",
     "@progress/kendo-angular-intl": "^2.0.0",
     "@progress/kendo-angular-l10n": "^2.0.0",
-    "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-drawing": "^1.0.0",
-    "@progress/kendo-angular-excel-export": "^3.0.0",
-    "@progress/kendo-angular-dateinputs": "^4.0.0",
     "@progress/kendo-angular-pdf-export": "^2.0.0",
     "@progress/kendo-angular-popup": "^3.0.0",
-    "@angular/localize": "~11.0.4",
-    "@progress/kendo-theme-default": "latest"
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-theme-default": "latest",
+    "cdk": "^1.78.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
